# black_hat_rust

./: .gitignore  README.md
ch01/sha1_cracker/: Cargo.toml
ch01/sha1_cracker/src/: main.rs
ch02_ch04/tricoder/: Cargo.toml
ch02_ch04/tricoder/src/: common_ports.rs  error.rs  main.rs  model.rs  ports.rs  subdomains.rs  vhosts.rs
exercises/: generics.rs  rseip.rs
exercises/ethernetIp/: Cargo.toml
exercises/ethernetIp/src/: main.rs
