[package]
name = "tricoder"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.55", features = ["derive"] }
futures = "0.3.32"
http = "1.4.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "tokio-macros"] }
tokio-stream = "0.1.18"
trust-dns-resolver = { version = "0.23.2", features = ["tokio"] }
